# WeatherWithMCP

./: .env.example  README.md  pyproject.toml
doc/: pipe.md  servers.md
src/: client.py  server.py
